terraform/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-acr-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-acr-test
  template:
    metadata:
      labels:
        app: nginx-acr-test
    spec:
      containers:
      - name: nginx
        image: bigk8sacr59074.azurecr.io/nginx:test
        ports:
        - containerPort: 80
